# filestats

./: Cargo.toml  README.md
src/: dir.rs  dirutils.rs  lib.rs  main.rs  stats.rs  utils.rs
src/dirutils/: tests.rs
src/stats/: test.rs
