[package]
name = "filestats"
version = "0.1.0"
edition = "2021"
authors = ["Max Marcon (https://github.com/maxmarcon/)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
console = "0.15.5"
rand = "0.8.5"
rayon = "1.6.1"
